feat: add redux with its almost complete reducers

--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "format": "pnpm run prettier --write"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.9",
+    "@reduxjs/toolkit": "^1.9.2",
     "mui-theme-pack": "^0.9.0",
     "pexels": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
@@ -32,6 +37,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4",
+    "prettier-eslint": "^15.0.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
   }
