--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/lab": "5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.2",
     "mui-theme-pack": "^0.9.0",
