--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.{js,ts,tsx}\" --fix",
     "prettier": "prettier --ignore-path .gitignore \"**/*.{js,json,ts,tsx,scss,css,md}\"",
-    "format": "pnpm run prettier --write"
+    "format": "pnpm run prettier --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -41,6 +42,7 @@
     "prettier": "^2.8.4",
     "prettier-eslint": "^15.0.1",
     "typescript": "^4.9.5",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "husky": "^8.0.0"
   }
 }
