--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pexels": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
@@ -39,10 +40,10 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.0",
     "prettier": "^2.8.4",
     "prettier-eslint": "^15.0.1",
     "typescript": "^4.9.5",
-    "vite": "^4.1.0",
-    "husky": "^8.0.0"
+    "vite": "^4.1.0"
   }
 }
